- Changed default destination paths for backup points in example config file
  for compatibility with --relative rsync flag
- Added formatting fix to show one slash only when invoking backup_script
  with link_dest option enabled
- Broke backwards compatibility for the benefit of fixing several outstanding
  issues. The default value for rsync_long_args is now different.
- Added utils/upgrade_rsnapshot.pl / "make upgrade" target for easy upgrade.
- Changed add_lockfile() verbose message to "echo $$ > /path/to/lockfile.pid"
  which is actually what the code is doing
- Added check to make sure backup_scripts can't share destination path with
  backup points
- Added check to make sure different backup_script destinations don't overlap
  and don't clobber backup point destinations
- Added "cmd_du" parameter to allow specifying the path to "du"
- Added upgrade script to RPM spec file
- Nicolas Kaiser <nikai@nikai.net> provided various typo fixes in the program
  and man page
- Fixed "missing rsync/configtest ok" bug
- Added config_version parameter, which is now required
- All autoconf files were updated with the ones from Debian sarge

VERSION 1.1.6 (Jul 05 16:35 2004)
------------------------------------------------------------------------------
- Moved the bulk of the program into smaller subroutines (finally)
- show_disk_usage() now exits the program directly instead of returning a
  value
- "0" can now be used as a valid interval name
- Config error messages now wrap before 80 columns.
- Moved $file_line_num global var into parse_config_file()
- Split on \s+ instead of \s where appropriate
- Moved $rsync_include_args and $rsync_include_file_args into
  parse_config_file()
- Removed the $have_{cmd} global variables entirely
- Took %opts out of the global namespace and into get_cmd_line_opts()
- Changed a failed syslog call from an error to a warning
- Removed $cwd from global namespace
- Fixed bug where cp_al() commands would not be displayed in test mode